--- a/Projet Electrique clim.html
+++ b/Projet Electrique clim.html
@@ -12,7 +12,7 @@
     <script src="script.js"></script>
 
     <link rel="stylesheet" href="E/C.css">
-    <title>S/E-C</title>
+    <title>S/Ee-C</title>
     <style>
     /* Button Styles */
     #myBtn {
