--- a/Devis.html
+++ b/Devis.html
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="Projet Electrique clim.html" >Accueil <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item  active">
-                  <a class="nav-link" href="#2">À propos</a>
+                  <a class="nav-link" href="#2">À propos de</a>
               </li>
               <li class="nav-item dropdown active">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
