--- a/Contactez-Nous.html
+++ b/Contactez-Nous.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav  ms-auto mb-lg-0">
               <li class="nav-item active">
-                  <a class="nav-link" href="Projet Electrique clim.html" >Accueil <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html" >Accueil <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item  active">
                   <a class="nav-link" href="#2">À propos</a>
